tests/functional/lang/eval-fail-filterSource-2.err.exp
error:
       … while calling the 'filterSource' builtin
         at /pwd/lang/eval-fail-filterSource-2.nix:1:1:
            1| builtins.filterSource [ ] "foo"
             | ^
            2|

       … while evaluating the second argument (the path to filter) passed to 'builtins.filterSource'

       error: string 'foo' doesn't represent an absolute path
